--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="texts">
-                 <h1 data-text="Hello World...">Hello Cansu...</h1>
+                 <h1 data-text="Hello Cansu...">Hello Cansu...</h1>
             
             <h2  id="text"> </h2>
         </div>
